--- a/OnlineShopping Application/OnlineShopping Application/Views/Shared/_Layout.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Shared/_Layout.cshtml
@@ -22,14 +22,14 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Category", "Index", "Category")</li>
+                    <li>@Html.ActionLink("Product", "Index", "Product")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div>@*class="container body-content"*@
         @RenderBody()
         <hr />
         <footer>
