--- a/OnlineShopping Application/OnlineShopping Application/Views/Cart/UserCartList.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Cart/UserCartList.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "UserCartList";
 }
 
-
+@Html.ActionLink("Procced To CheckOut","GoToPayment")
 <table class="table">
     <tr>
        <th>
@@ -38,8 +38,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+           @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
     </tr>
 }
