Backend almost Done

--- a/OnlineShopping Application/OnlineShopping Application/Views/Shared/_LoginPartial.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Shared/_LoginPartial.cshtml
@@ -9,18 +9,34 @@
             <li>
                 <div class="dropdown">
                     <button class="dropbtn">"Hello " @User.Identity.GetUserName() </button>
-                    <div class="dropdown-content">
-                        @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-                        @Html.ActionLink("See Detail", "ShowUserDetail", "User")
-                         @Html.ActionLink("Update Password","UpdatePassword","User")
-                        @Html.ActionLink("Update Detail", "EditUserDetail", "User")
-                    </div>
+                    @{
+                        if (User.IsInRole("User"))
+                        {
+                            <div class="dropdown-content">
+                                @*@Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })*@
+                                @Html.ActionLink("My Detail", "ShowUserDetail", "User")
+                                @*@Html.ActionLink("Update Password","UpdatePassword","User")*@
+                                @Html.ActionLink("Update Detail", "EditUserDetail", "User")
+                                @Html.ActionLink("My Cart", "UserCartList", "Cart")
+                            </div>
+
+                        }
+                        else if (User.IsInRole("Admin"))
+                        {
+                            <div class="dropdown-content">
+                                @*@Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })*@
+                                @Html.ActionLink("My Detail", "ShowUserDetail", "User")
+                                @*@Html.ActionLink("Update Password","UpdatePassword","User")*@
+                                @Html.ActionLink("Update Detail", "EditUserDetail", "User")
+                                @Html.ActionLink("Current Orders", "Index", "Order")
+                            </div>
+
+                        }
+                    }
+                    
                 </div>
             </li>
-            <li>
-                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new {title = "Manage"})
-            </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+           <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
     }
 }
