--- a/OnlineShopping Application/OnlineShopping Application/Views/Product/Details.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Product/Details.cshtml
@@ -42,8 +42,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <img src="@Url.Content(Model.ImageUrl)" width="100" height="80" />
-                @Html.ValidationMessageFor(model => model.ImageUrl, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model=>model.ImageUrl)
+                <img src="@Url.Content(Model.ImageUrl)" width="100" height="80"/>
+                @Html.ValidationMessageFor(model => model.ImageUrl, "", new {@class = "text-danger"})
             </div>
         </div>
 
