--- a/OnlineShopping Application/OnlineShopping Application/Views/Category/Delete.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Category/Delete.cshtml
@@ -3,30 +3,35 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="container body-content">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-8">
+            <br/><br/>
+            <h2>Are you sure you want to delete this?</h2><br /><br />
+            <div>
 
-<h2>Delete</h2>
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </dt>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Name)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                </dl>
 
-    </dl>
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                    <div class="form-actions no-color">
+                        <input type="submit" value="Delete" class="btn btn-default btn-danger"/> <br/><br/>
+                        @Html.ActionLink("Back to List", "Index")
+                    </div>
+                }
+            </div>
         </div>
-    }
+    </div>
 </div>
