--- a/OnlineShopping Application/OnlineShopping Application/Views/Category/Index.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Category/Index.cshtml
@@ -2,40 +2,48 @@
 
 @{
     ViewBag.Title = "Index";
-    int sl = 1;
+    int sl = 0;
 }
 
-<h2>Index</h2>
+<div class="container body-content">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-7">
+            <br/><br/>
+            <p>
+                @Html.ActionLink("Add New Category", "Add", null, new {@class = "btn btn-success"})
+            </p>
+            <br /><br />
+            <table class="table table-bordered table-striped">
+                <tr>
+                    <th>SL</th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th></th>
+                </tr>
 
-<p>
-    @Html.ActionLink("Add New Category", "Add")
-</p>
-<table class="table">
-    <tr>
-        <th>SL</th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-    </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @{
+                                sl++;
+                            }
+                            @sl
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+                            @Html.ActionLink("Details", "Details", new {id = item.Id}) |
+                            @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                        </td>
+                    </tr>
+                }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @{ 
-                sl++;
-            }
-
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+            </table>
+        </div>
+    </div>
+</div>
