--- a/OnlineShopping Application/OnlineShopping Application/Views/Home/Index.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Home/Index.cshtml
@@ -27,8 +27,8 @@
     <div class="carousel-inner">
 
         <div class="item active">
-            
-            <img src="~/Image/Default/01.jpg" alt="Los Angeles"   style="width:90%;">
+
+            <img src="~/Image/Default/01.jpg" alt="Los Angeles" style="width: 90%;">
             <div class="carousel-caption">
                 <h3>Los Angeles</h3>
                 <p>LA is always so much fun!</p>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="item">
-            <img src="~/Image/Default/02.jpg" alt="Chicago"  style="width:90%;">
+            <img src="~/Image/Default/02.jpg" alt="Chicago" style="width: 90%;">
             <div class="carousel-caption">
                 <h3>Chicago</h3>
                 <p>Thank you, Chicago!</p>
@@ -44,14 +44,14 @@
         </div>
 
         <div class="item">
-            <img src="~/Image/Default/03.jpg" alt="New York"  style="width: 90%;">
+            <img src="~/Image/Default/03.jpg" alt="New York" style="width: 90%;">
             <div class="carousel-caption">
                 <h3>New York</h3>
                 <p>We love the Big Apple!</p>
             </div>
         </div>
         <div class="item">
-            <img src="~/Image/Default/04.png" alt="New York"  style="width: 90%;">
+            <img src="~/Image/Default/04.png" alt="New York" style="width: 90%;">
             <div class="carousel-caption">
                 <h3>New York</h3>
                 <p>We love the Big Apple!</p>
@@ -65,21 +65,21 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/Image/Default/06.png" alt="New York"  style="width: 90%;">
+            <img src="~/Image/Default/06.png" alt="New York" style="width: 90%;">
             <div class="carousel-caption">
                 <h3>New York</h3>
                 <p>We love the Big Apple!</p>
             </div>
         </div>
         <div class="item">
-            <img src="~/Image/Default/07.jpg" alt="New York"  style="width: 90%;">
+            <img src="~/Image/Default/07.jpg" alt="New York" style="width: 90%;">
             <div class="carousel-caption">
                 <h3>New York</h3>
                 <p>We love the Big Apple!</p>
             </div>
         </div>
         <div class="item">
-            <img src="~/Image/Default/08.jpg" alt="New York"  style="width:90%;">
+            <img src="~/Image/Default/08.jpg" alt="New York" style="width: 90%;">
             <div class="carousel-caption">
                 <h3>New York</h3>
                 <p>We love the Big Apple!</p>
@@ -98,3 +98,107 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
+@* Here it goes*@
+<script src="~/Scripts/jssor.slider-27.5.0.min.js"></script>
+<script type="text/javascript">
+        jssor_1_slider_init = function() {
+
+            var jssor_1_options = {
+              $AutoPlay: 1,
+              $Idle: 0,
+              $SlideDuration: 5000,
+              $SlideEasing: $Jease$.$Linear,
+              $PauseOnHover: 4,
+              $SlideWidth: 140,
+              $Align: 0
+            };
+
+            var jssor_1_slider = new $JssorSlider$("jssor_1", jssor_1_options);
+
+            /*#region responsive code begin*/
+
+            var MAX_WIDTH = 980;
+
+            function ScaleSlider() {
+                var containerElement = jssor_1_slider.$Elmt.parentNode;
+                var containerWidth = containerElement.clientWidth;
+
+                if (containerWidth) {
+
+                    var expectedWidth = Math.min(MAX_WIDTH || containerWidth, containerWidth);
+
+                    jssor_1_slider.$ScaleWidth(expectedWidth);
+                }
+                else {
+                    window.setTimeout(ScaleSlider, 30);
+                }
+            }
+
+            ScaleSlider();
+
+            $Jssor$.$AddEvent(window, "load", ScaleSlider);
+            $Jssor$.$AddEvent(window, "resize", ScaleSlider);
+            $Jssor$.$AddEvent(window, "orientationchange", ScaleSlider);
+            /*#endregion responsive code end*/
+        };
+</script>
+<style>
+        /*jssor slider loading skin spin css*/
+    .jssorl-009-spin img {
+        animation-name: jssorl-009-spin;
+        animation-duration: 1.6s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+    }
+
+</style>
+
+<br/>
+<h2>Bamboo Made things</h2>
+<div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:100px;overflow:hidden;visibility:hidden;">
+    <!-- Loading Screen -->
+    <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
+        <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
+    </div>
+    <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:100px;overflow:hidden;">
+        <div>
+            <img data-u="image" src="img/001.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/02.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/02.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/02.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/02.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/02.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="img/019.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="img/020.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="img/021.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="img/022.jpg" />
+        </div>
+        <div>
+            <img data-u="image" src="img/024.jpg" />
+        </div>
+    </div>
+</div>
+<script type="text/javascript">jssor_1_slider_init();</script>
+<!-- #endregion Jssor Slider End -->
+
+
+@*Its ends*@
