--- a/OnlineShopping Application/OnlineShopping Application/Views/Product/Details.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Product/Details.cshtml
@@ -3,67 +3,47 @@
 @{
     ViewBag.Title = "Details";
 }
+<br/><br/>
 <div class="container body-content">
-    <h2>Details</h2>
-
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-horizontal">
-            <h4>ProductDetailViewModel</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+    <div class="row">
+        <div class="col-md-8">
+            <div class="thumbnail">
+                <div class="form-group">
+                    <h3>Name : @Model.Name</h3>
                 </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.HiddenFor(model => model.ImageUrl)
-                    <img src="@Url.Content(Model.ImageUrl)" width="100" height="80" />
-                    @Html.ValidationMessageFor(model => model.ImageUrl, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Qunatity, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Qunatity, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Qunatity, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Add to Cart" class="btn btn-default" />
-                </div>
-            </div>
+               
+                </div><br />
+            <div class="thumbnail">
+                <img src="@Url.Content(Model.ImageUrl)" width="500" height="500"/>
+            </div><br/>
+            <div class="thumbnail"><h4>Price : @Model.Price</h4></div><br/>
+            <div class="thumbnail"><h4>Description : @Model.Description</h4></div><br/>
         </div>
-    }
+        <div class="col-md-4">
+            <br/><br/><br /><br /><br /><br />
+            @using (Html.BeginForm())
+            {<div class="form-horizontal">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Qunatity, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Qunatity, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Qunatity, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <br />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Add to Cart" class="btn btn-default btn-success" />
+                    </div>
+                </div>
+            </div>
+            }
+        </div >
+                </div >
+            
 
+   
+    
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
