Home page image added

--- a/OnlineShopping Application/OnlineShopping Application/Views/Shared/_LoginPartial.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Shared/_LoginPartial.cshtml
@@ -38,6 +38,7 @@
                                 @Html.ActionLink("My Detail", "ShowUserDetail", "User")
                                 @Html.ActionLink("Update Detail", "EditUserDetail", "User")
                                 @Html.ActionLink("My Cart", "UserCartList", "Cart")
+                                @Html.ActionLink("Give FeedBack", "Create", "FeedBack")
                             </div>
 
                         }
@@ -50,6 +51,7 @@
                                 @Html.ActionLink("My Detail", "ShowUserDetail", "User")
                                 @Html.ActionLink("Update Detail", "EditUserDetail", "User")
                                 @Html.ActionLink("Current Orders", "Index", "Order")
+                                @Html.ActionLink("See FeedBacks", "Index", "FeedBack")
                             </div>
 
                         }
