--- a/OnlineShopping Application/OnlineShopping Application/Views/Home/Index.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Home/Index.cshtml
@@ -102,46 +102,168 @@
 @* Here it goes*@
 <script src="~/Scripts/jssor.slider-27.5.0.min.js"></script>
 <script type="text/javascript">
-        jssor_1_slider_init = function() {
+    jssor_1_slider_init = function() {
 
-            var jssor_1_options = {
-              $AutoPlay: 1,
-              $Idle: 0,
-              $SlideDuration: 5000,
-              $SlideEasing: $Jease$.$Linear,
-              $PauseOnHover: 4,
-              $SlideWidth: 140,
-              $Align: 0
+        var jssor_1_options = {
+            $AutoPlay: 1,
+            $Idle: 0,
+            $SlideDuration: 5000,
+            $SlideEasing: $Jease$.$Linear,
+            $PauseOnHover: 4,
+            $SlideWidth: 140,
+            $Align: 0
+        };
+
+        var jssor_1_slider = new $JssorSlider$("jssor_1", jssor_1_options);
+
+        /*#region responsive code begin*/
+
+        var MAX_WIDTH = 980;
+
+        function ScaleSlider() {
+            var containerElement = jssor_1_slider.$Elmt.parentNode;
+            var containerWidth = containerElement.clientWidth;
+
+            if (containerWidth) {
+
+                var expectedWidth = Math.min(MAX_WIDTH || containerWidth, containerWidth);
+
+                jssor_1_slider.$ScaleWidth(expectedWidth);
+            } else {
+                window.setTimeout(ScaleSlider, 30);
+            }
+        }
+
+        ScaleSlider();
+
+        $Jssor$.$AddEvent(window, "load", ScaleSlider);
+        $Jssor$.$AddEvent(window, "resize", ScaleSlider);
+        $Jssor$.$AddEvent(window, "orientationchange", ScaleSlider);
+        /*#endregion responsive code end*/
+    };
+@*</script>
+
+<script type="text/javascript">*@
+    jssor_2_slider_init = function() {
+
+        var jssor_2_options = {
+            $AutoPlay: 1,
+            $Idle: 0,
+            $SlideDuration: 5000,
+            $SlideEasing: $Jease$.$Linear,
+            $PauseOnHover: 4,
+            $SlideWidth: 140,
+            $Align: 0
+        };
+
+        var jssor_2_slider = new $JssorSlider$("jssor_2", jssor_2_options);
+
+        /*#region responsive code begin*/
+
+        var MAX_WIDTH = 980;
+
+        function ScaleSlider2() {
+            var containerElement = jssor_2_slider.$Elmt.parentNode;
+            var containerWidth = containerElement.clientWidth;
+
+            if (containerWidth) {
+
+                var expectedWidth = Math.min(MAX_WIDTH || containerWidth, containerWidth);
+
+                jssor_2_slider.$ScaleWidth(expectedWidth);
+            } else {
+                window.setTimeout(ScaleSlider2, 30);
+            }
+        }
+
+        ScaleSlider2();
+
+        $Jssor$.$AddEvent(window, "load", ScaleSlider2);
+        $Jssor$.$AddEvent(window, "resize", ScaleSlider2);
+        $Jssor$.$AddEvent(window, "orientationchange", ScaleSlider2);
+        /*#endregion responsive code end*/
+}
+        jssor_3_slider_init = function() {
+
+            var jssor_3_options = {
+                $AutoPlay: 1,
+                $Idle: 0,
+                $SlideDuration: 5000,
+                $SlideEasing: $Jease$.$Linear,
+                $PauseOnHover: 4,
+                $SlideWidth: 140,
+                $Align: 0
             };
 
-            var jssor_1_slider = new $JssorSlider$("jssor_1", jssor_1_options);
+            var jssor_3_slider = new $JssorSlider$("jssor_3", jssor_3_options);
 
             /*#region responsive code begin*/
 
             var MAX_WIDTH = 980;
 
-            function ScaleSlider() {
-                var containerElement = jssor_1_slider.$Elmt.parentNode;
+            function ScaleSlider3() {
+                var containerElement = jssor_3_slider.$Elmt.parentNode;
                 var containerWidth = containerElement.clientWidth;
 
                 if (containerWidth) {
 
                     var expectedWidth = Math.min(MAX_WIDTH || containerWidth, containerWidth);
 
-                    jssor_1_slider.$ScaleWidth(expectedWidth);
-                }
-                else {
-                    window.setTimeout(ScaleSlider, 30);
+                    jssor_3_slider.$ScaleWidth(expectedWidth);
+                } else {
+                    window.setTimeout(ScaleSlider3, 30);
                 }
             }
 
-            ScaleSlider();
+            ScaleSlider3();
 
-            $Jssor$.$AddEvent(window, "load", ScaleSlider);
-            $Jssor$.$AddEvent(window, "resize", ScaleSlider);
-            $Jssor$.$AddEvent(window, "orientationchange", ScaleSlider);
+            $Jssor$.$AddEvent(window, "load", ScaleSlider3);
+            $Jssor$.$AddEvent(window, "resize", ScaleSlider3);
+            $Jssor$.$AddEvent(window, "orientationchange", ScaleSlider3);
             /*#endregion responsive code end*/
         };
+
+
+        jssor_4_slider_init = function () {
+
+            var jssor_4_options = {
+                $AutoPlay: 1,
+                $Idle: 0,
+                $SlideDuration: 5000,
+                $SlideEasing: $Jease$.$Linear,
+                $PauseOnHover: 4,
+                $SlideWidth: 140,
+                $Align: 0
+            };
+
+            var jssor_4_slider = new $JssorSlider$("jssor_4", jssor_4_options);
+
+            /*#region responsive code begin*/
+
+            var MAX_WIDTH = 980;
+
+            function ScaleSlider4() {
+                var containerElement = jssor_4_slider.$Elmt.parentNode;
+                var containerWidth = containerElement.clientWidth;
+
+                if (containerWidth) {
+
+                    var expectedWidth = Math.min(MAX_WIDTH || containerWidth, containerWidth);
+
+                    jssor_4_slider.$ScaleWidth(expectedWidth);
+                } else {
+                    window.setTimeout(ScaleSlider4, 30);
+                }
+            }
+
+            ScaleSlider4();
+
+            $Jssor$.$AddEvent(window, "load", ScaleSlider4);
+            $Jssor$.$AddEvent(window, "resize", ScaleSlider4);
+            $Jssor$.$AddEvent(window, "orientationchange", ScaleSlider4);
+            /*#endregion responsive code end*/
+        };
+    
 </script>
 <style>
         /*jssor slider loading skin spin css*/
@@ -155,49 +277,188 @@
 </style>
 
 <br/>
-<h2>Bamboo Made things</h2>
-<div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:100px;overflow:hidden;visibility:hidden;">
+<h2>Bambo Made things</h2>
+<div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
+    <!-- Loading Screen -->
+    <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
+        <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
+    </div>
+    <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam01.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam02.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam03.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam04.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam05.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam06.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam07.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam08.png"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam11.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam09.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Bam10.jpg"/>
+        </div>
+    </div>
+</div>
+
+<br/>
+
+<br />
+<h2>Teracote Made things</h2>
+<div id="jssor_2" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
+    <!-- Loading Screen -->
+    <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
+        <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
+    </div>
+    <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter01.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter02.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter03.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter04.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter05.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter06.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter07.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter08.jpeg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter09.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter10.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Ter11.jpg"/>
+        </div>
+    </div>
+</div>
+
+
+<br />
+<h2>Jwelery Made things</h2>
+<div id="jssor_3" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
+    <!-- Loading Screen -->
+    <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
+        <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
+    </div>
+    <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl01.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl02.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl03.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl04.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl05.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl06.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl07.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl08.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl09.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl10.jpg"/>
+        </div>
+        <div>
+            <img data-u="image" src="~/Image/Default/Jwl11.png"/>
+        </div>
+    </div>
+</div>
+
+
+<br />
+<h2>Embroidery Made things</h2>
+<div id="jssor_4" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:100px;overflow:hidden;visibility:hidden;">
     <!-- Loading Screen -->
     <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
         <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
     </div>
     <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:100px;overflow:hidden;">
         <div>
-            <img data-u="image" src="img/001.jpg" />
+            <img data-u="image" src="~/Image/Default/Em01.jpg" />
         </div>
         <div>
-            <img data-u="image" src="~/Image/Default/02.jpg" />
+            <img data-u="image" src="~/Image/Default/Em02.jpg" />
         </div>
         <div>
-            <img data-u="image" src="~/Image/Default/02.jpg" />
+            <img data-u="image" src="~/Image/Default/Em03.jpg" />
         </div>
         <div>
-            <img data-u="image" src="~/Image/Default/02.jpg" />
+            <img data-u="image" src="~/Image/Default/Em04.png" />
         </div>
         <div>
-            <img data-u="image" src="~/Image/Default/02.jpg" />
+            <img data-u="image" src="~/Image/Default/Em05.jpg" />
         </div>
         <div>
-            <img data-u="image" src="~/Image/Default/02.jpg" />
+            <img data-u="image" src="~/Image/Default/Em06.jpg" />
         </div>
         <div>
-            <img data-u="image" src="img/019.jpg" />
+            <img data-u="image" src="~/Image/Default/Em07.jpg" />
         </div>
         <div>
-            <img data-u="image" src="img/020.jpg" />
+            <img data-u="image" src="~/Image/Default/Em08.jpg" />
         </div>
         <div>
-            <img data-u="image" src="img/021.jpg" />
+            <img data-u="image" src="~/Image/Default/Em09.jpg" />
         </div>
         <div>
-            <img data-u="image" src="img/022.jpg" />
+            <img data-u="image" src="~/Image/Default/Em10.jpg" />
         </div>
         <div>
-            <img data-u="image" src="img/024.jpg" />
+            <img data-u="image" src="~/Image/Default/Em11.jpg" />
         </div>
     </div>
 </div>
 <script type="text/javascript">jssor_1_slider_init();</script>
+<script type="text/javascript">jssor_2_slider_init();</script>
+<script type="text/javascript">jssor_3_slider_init();</script>
+<script type="text/javascript">jssor_4_slider_init();</script>
 <!-- #endregion Jssor Slider End -->
 
 
