--- a/OnlineShopping Application/OnlineShopping Application/Views/Home/Index.cshtml
+++ b/OnlineShopping Application/OnlineShopping Application/Views/Home/Index.cshtml
@@ -275,183 +275,202 @@
     }
 
 </style>
+<div class="container body-content">
 
-<br/>
-<h2>Bambo Made things</h2>
-<div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
-    <!-- Loading Screen -->
-    <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
-        <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
-    </div>
-    <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam01.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam02.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam03.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam04.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam05.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam06.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam07.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam08.png"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam11.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam09.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Bam10.jpg"/>
+    <br/><br/>
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-6">
+            <h2>Bambo Made things</h2>
         </div>
     </div>
-</div>
-
-<br/>
-
-<br />
-<h2>Teracote Made things</h2>
-<div id="jssor_2" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
-    <!-- Loading Screen -->
-    <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
-        <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
-    </div>
-    <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter01.jpg"/>
+    <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
+        <!-- Loading Screen -->
+        <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
+            <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
         </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter02.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter03.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter04.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter05.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter06.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter07.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter08.jpeg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter09.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter10.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Ter11.jpg"/>
+        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam01.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam02.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam03.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam04.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam05.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam06.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam07.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam08.png"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam11.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam09.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Bam10.jpg"/>
+            </div>
         </div>
     </div>
-</div>
 
-
-<br />
-<h2>Jwelery Made things</h2>
-<div id="jssor_3" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
-    <!-- Loading Screen -->
-    <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
-        <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
-    </div>
-    <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl01.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl02.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl03.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl04.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl05.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl06.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl07.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl08.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl09.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl10.jpg"/>
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Jwl11.png"/>
+    <br/>
+    <br/>
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-6">
+            <h2>Tearcota Made things</h2>
         </div>
     </div>
-</div>
-
-
-<br />
-<h2>Embroidery Made things</h2>
-<div id="jssor_4" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:100px;overflow:hidden;visibility:hidden;">
-    <!-- Loading Screen -->
-    <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
-        <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
+    <div id="jssor_2" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
+        <!-- Loading Screen -->
+        <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
+            <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
+        </div>
+        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter01.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter02.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter03.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter04.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter05.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter06.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter07.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter08.jpeg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter09.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter10.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Ter11.jpg"/>
+            </div>
+        </div>
     </div>
-    <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:100px;overflow:hidden;">
-        <div>
-            <img data-u="image" src="~/Image/Default/Em01.jpg" />
+
+    <br/><br/>
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-6">
+            <h2>Hand Made Jwellery</h2>
         </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em02.jpg" />
+    </div>
+    <div id="jssor_3" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
+        <!-- Loading Screen -->
+        <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
+            <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
         </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em03.jpg" />
+        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl01.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl02.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl03.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl04.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl05.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl06.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl07.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl08.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl09.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl10.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Jwl11.png"/>
+            </div>
         </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em04.png" />
+    </div>
+
+    <br/><br/>
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-6">
+            <h2>Embroidery Made things</h2>
         </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em05.jpg" />
+    </div>
+    <div id="jssor_4" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden; visibility: hidden;">
+        <!-- Loading Screen -->
+        <div data-u="loading" class="jssorl-009-spin" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; text-align: center; background-color: rgba(0, 0, 0, 0.7);">
+            <img style="margin-top: -19px; position: relative; top: 50%; width: 38px; height: 38px;" src="img/spin.svg"/>
         </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em06.jpg" />
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em07.jpg" />
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em08.jpg" />
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em09.jpg" />
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em10.jpg" />
-        </div>
-        <div>
-            <img data-u="image" src="~/Image/Default/Em11.jpg" />
+        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 980px; height: 100px; overflow: hidden;">
+            <div>
+                <img data-u="image" src="~/Image/Default/Em01.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em02.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em03.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em04.png"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em05.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em06.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em07.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em08.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em09.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em10.jpg"/>
+            </div>
+            <div>
+                <img data-u="image" src="~/Image/Default/Em11.jpg"/>
+            </div>
         </div>
     </div>
 </div>
